<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_screen" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/linearLayoutPhone"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/backgroun_border"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/splash_msg"
                    android:textColor="@color/textHeader"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/asPhoneNo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:digits="@string/digits_number"
                    android:hint="Enter 10 digit mobile no."
                    android:inputType="phone"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textColorHighlight="#3F51B5" />
                <!--<TextView
                    android:id="@+id/asForgetMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asforgetMob"
                    android:gravity="right"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="right"
                    android:textStyle="italic"
                    />-->
                <android.support.v7.widget.CardView
                    android:id="@+id/card_view1"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:cardBackgroundColor="#d9d9d9"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="1dp">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true">

                        <Button
                            android:id="@+id/asSubmit"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#3F51B5"
                            android:fontFamily="monospace"
                            android:text="Get OTP"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:textColor="#f3f3f3"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutOTP"
            android:layout_width="match_parent"
            android:layout_height="229dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/backgroun_border"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otp"
                    android:textColor="@color/textHeader"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/asOTP"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:hint="Enter OTP"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textColorHighlight="#3F51B5"
                    android:textSize="15dp" />
                <!--<TextView
                    android:id="@+id/asForgetMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asforgetMob"
                    android:gravity="right"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="right"
                    android:textStyle="italic"
                    />-->
                <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:cardBackgroundColor="#d9d9d9"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="1dp">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true">

                        <Button
                            android:id="@+id/asbutonOTP"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#3F51B5"
                            android:text="Submit"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:textColor="#f3f3f3"
                            android:textSize="15dp" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="5dp"
                    android:text="00:00"
                    android:visibility="gone" />


            </RelativeLayout>

            <TextView
                android:id="@+id/asResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:text="@string/resend"
                android:textColor="#228B22"
                android:textSize="15dp" />

        </LinearLayout>
    </FrameLayout>
</RelativeLayout>