<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@color/backgroung_color"

    >

    <android.support.v7.widget.CardView
        android:id="@+id/mainSerchPannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:padding="5dp"
                    android:text="Countary" />

                <Spinner
                    android:id="@+id/fcCountary"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.5"
                    android:dropDownVerticalOffset="50dp"
                    android:prompt="@string/title_selectContry"
                    android:spinnerMode="dialog"
                    android:textSize="12dp"
                    android:theme="@style/ThemeSpinner">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:padding="5dp"
                    android:text="State" />

                <Spinner
                    android:id="@+id/fcState"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.5"
                    android:dropDownVerticalOffset="50dp"
                    android:prompt="@string/title_selectState"
                    android:spinnerMode="dialog"
                    android:textSize="12dp"
                    android:theme="@style/ThemeSpinner">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:padding="5dp"
                    android:text="City" />

                <Spinner
                    android:id="@+id/fcCity"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.5"
                    android:dropDownVerticalOffset="50dp"
                    android:prompt="@string/title_selectCity"
                    android:spinnerMode="dialog"
                    android:textSize="12dp"
                    android:theme="@style/ThemeSpinner">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <Button
                    android:id="@+id/asSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:requiresFadingEdge="vertical"
                    android:text="Find"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:visibility="gone"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="1dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            app:met_floatingLabel="highlight">

            <EditText
                android:id="@+id/fadSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:ems="10"
                android:focusable="true"
                android:hint="Search..."
                android:inputType="text"
                android:singleLine="true"
                android:textSize="@dimen/text_two" />
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <ListView
        android:id="@+id/faclv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"

        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/card_view2"
        android:layout_toRightOf="@+id/card_view2"
        android:clickable="true"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:scrollbars="none"></ListView>

    <RelativeLayout
        android:id="@+id/progressbarrelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading please wait..."></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@drawable/footer_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4052b5"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone"
            android:weightSum="1">

            <include layout="@layout/find_filterbar" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>